--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    runs-on: linux-latest
+    runs-on: macOS-latest
     strategy:
       matrix:
         r-version: [3.5, 3.6]
@@ -29,7 +29,7 @@ jobs:
           r-version: ${{ matrix.r-version }}
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
+          install.packages(c("remotes", "rcmdcheck"),repos="http://cran.us.r-project.org")
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Check
