--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -27,3 +27,10 @@ jobs:
         uses: r-lib/actions/setup-r@ffe45a39586f073cc2e9af79c4ba563b657dc6e3
         with:
           r-version: ${{ matrix.r-version }}
+      - name: comment PR
+        uses: Sheyashm16/Coursera-Developing-Data-Products-Final-Project@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          msg: "Thanks for submitting Pull Request!!"
+          check_for_duplicate_msg: false  # OPTIONAL 
