--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           r-version: ${{ matrix.r-version }}
       - name: Comments  
-        uses: actions/first-interaction@v1
+        uses: Shreyashm16/Coursera-Developing-Data-Products-Final-Project@v1.3.1-multi
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: 'Thanks for submitting issue!!'
