--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           r-version: ${{ matrix.r-version }}
       - name: Comments  
-        uses: Shreyashm16/Coursera-Developing-Data-Products-Final-Project@v1.3.1-multi
+        uses: peter-evans/create-pull-request@v1.3.1-multi
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: 'Thanks for submitting issue!!'
+          #issue-message: 'Thanks for submitting issue!!'
           pr-message: 'Thanks for submitting Pull Request!!'
