--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -27,10 +27,15 @@ jobs:
       - name: Set up R ${{ matrix.r-version }}
         uses: r-lib/actions/setup-r@ffe45a39586f073cc2e9af79c4ba563b657dc6e3
         with:
-          r-version: ${{ matrix.r-version }}
-      - name: Comments  
-        uses: peter-evans/create-pull-request@v1.3.1-multi
+          r-version: ${{ matrix.r-version }} 
+  example:
+    name: sample comment
+    runs-on: macOS-latest
+    steps:
+      - name: comment PR
+        uses: unsplash/comment-on-pr@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          #issue-message: 'Thanks for submitting issue!!'
-          pr-message: 'Thanks for submitting Pull Request!!'
+          msg: "Check out this message!"
+          check_for_duplicate_msg: false  # OPTIONAL 
