--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -16,11 +16,22 @@ on:
   issues:
 
 jobs:
-  fixed_command:
-    if: startsWith(github.event.comment.body, '/fixed')
-    name: fixed
+   build:
     runs-on: macOS-latest
+    strategy:
+      matrix:
+        r-version: [3.5, 3.6]
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up R ${{ matrix.r-version }}
+        uses: r-lib/actions/setup-r@ffe45a39586f073cc2e9af79c4ba563b657dc6e3
+        with:
+          r-version: ${{ matrix.r-version }} 
+   fixed_command:
+     if: startsWith(github.event.comment.body, '/fixed')
+     name: fixed
+     runs-on: macOS-latest
+     steps:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/pr-fetch@master
         with:
