--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -13,7 +13,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  issues:
+  issue_comment:
+    types: [created]
 
 jobs:
    build:
