--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -37,3 +37,4 @@ jobs:
       - uses: r-lib/actions/pr-fetch@master
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          msg: "Check this!"
