--- a/.github/workflows/r_init.yml
+++ b/.github/workflows/r_init.yml
@@ -29,7 +29,7 @@ jobs:
         #with:
          # r-version: ${{ matrix.r-version }} 
    fixed_command:
-     if: startsWith(github.event.comment.body, '/fixed')
+     if: startsWith(github.event.comment.body, '/Update')
      name: fixed
      runs-on: macOS-latest
      steps:
